# libkdegames

./: .kde-ci.yml  CMakeLists.txt  FindKDEGames.cmake  KDEGamesConfig.cmake.in  KDEGamesConfigVersion.cmake.in  Mainpage.dox  Makefile.am  Messages.sh  README  TODO  cardcache.cpp  cardcache.h  cardcache_p.h  carddeckinfo.cpp  carddeckinfo.h  carddeckinfo_p.h  chooserastergraphicssystem.cpp  colorproxy_p.cpp  colorproxy_p.h  configure.in.in  kcanvasrootpixmap.cpp  kcanvasrootpixmap.h  kcarddialog.cpp  kcarddialog.h  kchat.cpp  kchat.h  kchatbase.cpp  kchatbase.h  kchatbaseitemdelegate.cpp  kchatbaseitemdelegate.h  kchatbasemodel.cpp  kchatbasemodel.h  kchatdialog.cpp  kchatdialog.h  kgamecanvas.cpp  kgamecanvas.h  kgamecardselector.ui  kgameclock.cpp  kgameclock.h  kgamedifficulty.cpp  (+58 more)
carddecks/: CMakeLists.txt  Makefile.am  README  convertpysols  readme.contrib
carddecks/SVG-cards-2.0/: AUTHORS  CMakeLists.txt  Changelog  NEWS  README  index.desktop  svg-cards-2.0.svgz
carddecks/cards-aisleriot/: COPYRIGHT  index.desktop
carddecks/cards-default/: CMakeLists.txt  index.desktop
carddecks/cards-dondorf-whist-b/: COPYRIGHT  index.desktop
carddecks/cards-gdkcard-bonded/: CMakeLists.txt  COPYRIGHT  index.desktop
carddecks/cards-hard-a-port/: COPYRIGHT  index.desktop
carddecks/cards-konqi-modern/: CMakeLists.txt  index.desktop
carddecks/cards-penguins/: CMakeLists.txt  index.desktop
carddecks/cards-spaced/: CMakeLists.txt  COPYRIGHT  index.desktop
carddecks/cards-warwick/: CMakeLists.txt  index.desktop
carddecks/cards-xskat-french/: COPYRIGHT  Makefile.am  index.desktop
carddecks/cards-xskat-german/: CMakeLists.txt  index.desktop
carddecks/cards1/: Makefile.am  index.desktop
carddecks/decks/: CMakeLists.txt  Makefile.am  deck0.desktop  deck1.desktop  deck1.svgz  deck10.desktop  deck10.svgz  deck11.desktop  deck11.svgz  deck12.desktop  deck12.svgz  deck13.desktop  deck13.svgz  deck14.desktop  deck15.desktop  deck15.svgz  deck16.desktop  deck16.svgz  deck17.desktop  deck17.svgz  deck18.desktop  deck18.svgz  deck19.desktop  deck2.desktop  deck2.svgz  deck20.desktop  deck21.desktop  deck22.desktop  deck23.desktop  deck24.desktop  deck25.desktop  deck25_dondorf.svgz  deck26.desktop  deck27.desktop  deck27_classic.svgz  deck28.desktop  (+16 more)
declarativeimports/: CMakeLists.txt  corebindingsplugin.cpp  corebindingsplugin.h
highscore/: CMakeLists.txt  Makefile.am  config-highscore.h.cmake  kconfigrawbackend.cpp  kconfigrawbackend.h  kexthighscore.cpp  kexthighscore.h  kexthighscore_gui.cpp  kexthighscore_gui.h  kexthighscore_internal.cpp  kexthighscore_internal.h  kexthighscore_item.cpp  kexthighscore_item.h  kexthighscore_tab.cpp  kexthighscore_tab.h  kfilelock.cpp  kfilelock.h  khighscore.cpp  khighscore.h  kscoredialog.cpp  kscoredialog.h
includes/: CMakeLists.txt  KCardCache  KCardDeckInfo  KCardDialog  KChat  KChatBase  KChatBaseItemDelegate  KChatDialog  KExtHighscore  KGGZRankingsDialog  KGGZSeatsDialog  KGameCanvas  KGameDifficulty  KGameLCD  KGameMisc  KGameProgress  KGameRenderedItem  KGameRenderedObjectItem  KGameRenderer  KGameRendererClient  KGameSvgDigits  KGameSvgDocument  KGameTheme  KGameThemeSelector  KGrid2D  KHighscore  KScoreDialog  KStandardGameAction  KZoomMainWindow  KgAudioScene  KgDeclarativeView  KgSound  KgTheme  KgThemeSelector
kgame/: CMakeLists.txt  COMPAT  DESIGN  Mainpage.dox  Makefile.am  README.LIB  TODO  kgame.cpp  kgame.h  kgamechat.cpp  kgamechat.h  kgameclient.cpp  kgameclient.h  kgameconnectdialog.cpp  kgameconnectdialog.h  kgamedebugdialog.cpp  kgamedebugdialog.h  kgamedialog.cpp  kgamedialog.h  kgameerror.cpp  kgameerror.h  kgameerrordialog.cpp  kgameerrordialog.h  kgameio.cpp  kgameio.h  kgamemessage.cpp  kgamemessage.h  kgamenetwork.cpp  kgamenetwork.h  kgamenostream.cpp  kgamenostream.h  kgameprocess.cpp  kgameprocess.h  kgameproperty.cpp  kgameproperty.h  kgamepropertyarray.h  kgamepropertyhandler.cpp  kgamepropertyhandler.h  kgamepropertylist.h  kgamesequence.cpp  (+15 more)
kggzgames/: CMakeLists.txt  Doxyfile  kggzgames_export.h  kggzrankingsdialog.cpp  kggzrankingsdialog.h  kggzseatsdialog.cpp  kggzseatsdialog.h
kggzmod/: CMakeLists.txt  Doxyfile  README.kggzmod  event.cpp  event.h  kggzmod_export.h  misc_private.h  module.cpp  module.h  module_private.h  player.cpp  player.h  player_private.h  request.cpp  request.h  statistics.cpp  statistics.h  statistics_private.h
kggznet/: CMakeLists.txt  Doxyfile  kggznet_export.h  kggzpacket.cpp  kggzpacket.h  kggzraw.cpp  kggzraw.h
libkdegamesprivate/: CMakeLists.txt  Mainpage.dox  kchat.cpp  kchat.h  kchatbase.cpp  kchatbase.h  kchatbaseitemdelegate.cpp  kchatbaseitemdelegate.h  kchatbasemodel.cpp  kchatbasemodel.h  kchatdialog.h  kgamecanvas.cpp  kgamecanvas.h  kgamedifficulty.cpp  kgamedifficulty.h  kgamesvgdocument.cpp  kgamesvgdocument.h  kgamesvgdocument_p.h  kgametheme.cpp  kgametheme.h  kgamethemeselector.cpp  kgamethemeselector.h  libkdegamesprivate_export.h
pics/: CMakeLists.txt  Makefile.am
src/: CMakeLists.txt  KDEGamesConfig.cmake.in  Messages.sh  colorproxy_p.cpp  colorproxy_p.h  kgameaudioscene.h  kgameclock.cpp  kgameclock.h  kgamedifficulty.cpp  kgamedifficulty.h  kgamegraphicsviewrenderer.cpp  kgamegraphicsviewrenderer.h  kgameimageprovider.cpp  kgameimageprovider_p.h  kgamepopupitem.cpp  kgamepopupitem.h  kgamerenderedgraphicsobject.cpp  kgamerenderedgraphicsobject.h  kgamerendereditem.cpp  kgamerendereditem.h  kgamerenderedobjectitem.cpp  kgamerenderedobjectitem.h  kgamerenderer.cpp  kgamerenderer.h  kgamerenderer_p.h  kgamerendererclient.cpp  kgamerendererclient.h  kgamesound.h  kgamestandardaction.cpp  kgamestandardaction.h  kgametheme.cpp  kgametheme.h  kgametheme_p.h  kgamethemeprovider.cpp  kgamethemeprovider.h  kgamethemeselector.cpp  kgamethemeselector.h  kgamethemeselector_p.h  kgaudioscene.h  kgdeclarativeview.cpp  (+18 more)
tests/: CMakeLists.txt  README  kgamepopupitemtest.cpp  kgamepopupitemtest.h  kgamepopupitemtest.ui  kgamepropertytest.cpp  kgamepropertytest.h  kgamesvgdigitstest.cpp  kgamesvgdigitstest.h  kgamesvgdocumenttest.cpp  kgamesvgdocumenttest.h
(+447 files in other folders)
